src/main/java/org/example/demo_ssr_v1_1/_core/errors/exception/Exception400.java
package org.example.demo_ssr_v1_1._core.errors.exception;

public class Exception400 extends RuntimeException {
    public Exception400(String message) {
        super(message);
    }
}
